# rdkafka-demo

./: README.md  configure.ac
src/: Makefile.am  main.cpp
